app/styles/components/layout/boxes.scss
layout-boxes {

	display:block;

	content {

		display:grid;
		grid-gap:20px 20px;
		margin-bottom:20px;
		grid-template-columns:repeat(3, 1fr);

		layout-boxes-item {

			padding:40px;
			display:block;
			text-align:left;
			border-radius:12px;
			background-color:var(--boxes-color);

			img {
				float:left;
				height:18px;
				margin-top:3px;
				margin-right:10px;
			}

			h3 {
				font-weight:600;
				line-height:1.5;
			}

			p {
				font-size:16px;
			}

		}

	}

	&[small] content {

		@include media(max-width-1150) {
			grid-template-columns:repeat(3, 1fr);
		}

		@include media(max-width-1024) {
			grid-template-columns:repeat(2, 1fr);
		}

		@include media(max-width-750) {
			grid-template-columns:repeat(1, 1fr);
		}

		layout-boxes-item {

			display:flex;
			align-items:top;
			padding:15px 25px;
			justify-content:flex-start;
			h3 { font-size:16px; }

			@include media(max-width-1024) {
				padding:10px 15px;
				h3 { font-size:16px; }
			}

			@include media(max-width-750) {
				padding:10px 15px;
				h3 { font-size:16px; }
			}

		}

	}

	&[large] content {

		@include media(max-width-1150) {
			grid-template-columns:repeat(2, 1fr);
		}

		@include media(max-width-780) {
			grid-template-columns:repeat(1, 1fr);
		}

		layout-boxes-item {

			text-align:left;
			padding:40px 40px;
			h3 { font-size:18px; }

			@include media(max-width-1024) {
				padding:30px 30px;
				h3 { font-size:16px; }
			}

			@include media(max-width-750) {
				padding:30px 30px;
				h3 { font-size:16px; }
			}

		}

	}

}

